--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ajv": "^8.17.1",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "gh-pages": "^3.2.3",
