--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@react-oauth/google": "^0.7.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@react-oauth/google": "^0.12.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "ajv": "^8.17.1",
-    "axios": "^1.2.3",
-    "bootstrap": "^5.2.3",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.7.4",
-    "react-dom": "^17.0.2",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "gh-pages": "^6.2.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
-    "react-loading-overlay": "^1.0.1",
-    "react-router-dom": "^6.3.0",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -53,5 +52,8 @@
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19"
+  },
+  "overrides": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
